# MapCreator

./: .gitignore  index.html  plaid_app.py  pyproject.toml
.claude/: settings.local.json
cli/: __main__.py
config/: class_configurations.yml  class_registry.yml  class_run_scheme_configurations.yml  extract_base_world_configs.yml  raster_classifications.yml
data/: Htrae_base_geometries_050725.html  Htrae_ocean_mask.html  KCC_notes.txt  ocean_ray_dataset_042325.geojson  ocean_ray_dataset_050725.geojson  ocean_ray_dataset_051025_2.geojson
data/processed/: climate_class_map.tif  land.dbf  land.geojson  land.shp  land.shx  land_mask.tif  merged_base_geography.dbf  merged_base_geography.geojson  merged_base_geography.shp  merged_base_geography.shx  ocean.geojson  water_mask.tif  waterbodies.dbf  waterbodies.geojson  waterbodies.shp  waterbodies.shx  world_class_map.tif
data/raw/: Microeconometrics Assignment 2.docx  Orsini_Exercise 11_1.docx  regression_data_saiz-like.csv  roback_problem.ipynb  saiz_problem_assignment.ipynb
data/shapefiles/: lakes_050725.geojson  land_042325.dbf  land_042325.shp  land_042325.shx  land_050725.geojson  ocean_050725.geojson
data/ui_layouts/: main_app.ui  main_app2.ui  main_app_fixed.ui  main_app_fixed_layout.ui
data_analysis/: rays.py
docs/: TODO.md  ideas.txt  koppen_classificaitons.txt
file_transit/: FinalPaper.docx  ReflectionPaper.docx  china_empirical_problem.ipynb
file_transit/batlimore data/: BLS_MARYLAND_BALTIMORE_MSA_DATA.csv  Baltimore_Snapshot_Table.docx  CompileReports.py  FRED_BALTIMORE_CITY_DATA.csv  FRED_BALTIMORE_CITY_SNAPSHOT_DATA.csv
file_transit/batlimore data/BLS_BaltimoreEmploymentData/: SeriesReport-20260428080635_29f75e.xlsx  SeriesReport-20260428080658_d02a7b.xlsx  SeriesReport-20260428080739_de9834.xlsx  SeriesReport-20260428080742_bc5752.xlsx  SeriesReport-20260428080745_3d595a.xlsx  SeriesReport-20260428080749_3a7d30.xlsx  SeriesReport-20260428080754_e8764c.xlsx  SeriesReport-20260428080757_fa8a1c.xlsx  SeriesReport-20260428080800_2a059c.xlsx  SeriesReport-20260428080802_24100f.xlsx
file_transit/batlimore data/FRED_Data/: ATNHPIUS24510A.csv  GDPALL24510.csv  LAUCN245100000000005A.csv  MDBALT5LFN.csv  MDBALT5POP.csv  MDBALT5URN.csv  MHIMD24510A052NCEN.csv  SMS24925810000000001.csv
mapcreator/: __init__.py  setup.cfg  utils.py
mapcreator/Potato/: berlin_36_86.parquet  empirical_problem_agglom.ipynb
mapcreator/cli/: __main__.py  cli.py  extract_base_world_configs.yml  init.py
mapcreator/features/: __init__.py  build_base_geometries.py  cast_rays.py  map_tests.py
mapcreator/features/old/: dump.py  dumped_code.py  geometry_mask_builder.py  image_utils_old.py
mapcreator/features/overlays/: layer_view.py  map_creator.py  map_view.py  open_layers_list.py  openlayerslist.py  palette_controls.py  qt_test.py  undo_stack.py
mapcreator/features/tracing/: TODO.md  __init__.py  contour_extraction.py  exporters.py  gdf_tools.py  geo_transform.py  img_preprocess.py  pipeline.py  polygonize.py  rasters.py  reclass.py  water_classify.py
mapcreator/globals/: __init__.py  config_models.py  configs.py  constants.py  directories.py  exporters.py  gdf_tools.py  image_utility.py  logutil.py
mapcreator/map/: __init__.py  build_base_geometries.py  cast_rays.py  generate_rays.py  geometry_mask_builder.py  image_map_isolate_ocean_feature.py  image_map_pre_edits.py  shapefile.py
mapcreator/map/analysis/: __init__.py  analysis_plots.py  plan.txt  ray_analysis.py  ray_brainstorm_plan.md
mapcreator/scripts/: __init__.py  extract_images.py  setup_project.py
mapcreator/tests/: test_processing.py
mapcreator/visualization/: __init__.py  polygon_viewer.py  viewing_util.py  world_viewer.py
mapcreator/viz/: viewing_util.py  world_viewer.py
tests/: setup_test.bash
