[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MapCreator"
version = "0.1.0"
description = "A Python package for creating and visualizing maps."
readme = "README.md"
authors = [
    { name = "Nicholas Orsini", email = "norsini1515@gmai.com" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "matplotlib",
    "geopandas",
    "shapely",
    "pillow",
    "opencv-python",
    "fiona"
]

[project.scripts]
mapc = "mapcreator.cli.__main__:app"