# Directory Structure for the MapCreator

# Root Directory: F:\\DnD\\WorldBuilding\\MapCreator/

# Project modules and submodules
#
# MapCreator/
# ├── mapcreator/             # Main Python package
# │   ├── __init__.py
# │   ├── globals/           # Global variables and constants
# │   │   ├── __init__.py
# │   │   └── constants.py  # Constant values
# │   │   └── directories.py # Directory variables
# │   ├── data/               # Data handling
# │   │   ├── __init__.py
# │   │   └── processing.py  # Process raw files
# │   ├── map/               # Map extraction and visualization
# │   │   ├── __init__.py
# │   ├── shapefile.py   # Generate shapefiles
# │   └── heightmap.py   # Create heightmaps
# │   ├── visualization/     # Visualization tools
# │   │   ├── __init__.py
# │   │   ├── plots.py         # Render maps for visualization
# │   │   └── overlays.py      # Add overlays (e.g., rivers, trade nodes)
# │   └── utils.py           # Utilities
# ├── tests/                     # Unit tests
# │   ├── __init__.py
# │   ├── test_processing.py   # Test data processing
# │   └── test_map_generation.py # Test map creation workflows
# ├── scripts/                 # Executable scripts
# │   ├── extract_images.py    # Extract images/maps from input files
# │   ├── setup_project.py     # Script to create the project structure
# ├── README.md                # Project documentation
# ├── setup.cfg                # Project metadata and dependencies
# └── pyproject.toml           # Build system configuration

# Editable package support setup.cfg

[metadata]
name = MapCreator
version = 0.2.0
author = Your Name
author_email = your.email@example.com
description = A Python package for creating and visualizing maps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YourUsername/MapCreator
project_urls =
    Source = https://github.com/YourUsername/MapCreator
    Tracker = https://github.com/YourUsername/MapCreator/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    matplotlib
    geopandas
    shapely
    pillow
    opencv-python
    fiona
    pandas
    tqdm

[options.package_data]
* = *.txt, *.md, *.csv

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"